--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,6 @@ python-multipart>=0.0.9
 cryptography>=41.0.0
 better-profanity>=0.7.0
 detoxify>=0.5.2
-torch>=2.0.0
+# torch será instalado separadamente como CPU-only no Dockerfile
 
 
