--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,8 +6,8 @@ WORKDIR /app
 # Copia package files
 COPY package*.json ./
 
-# Instala dependências
-RUN npm ci
+# Instala dependências (incluindo devDependencies para build)
+RUN npm ci --no-audit --no-fund
 
 # Copia código fonte
 COPY . .
@@ -19,13 +19,16 @@ ENV VITE_API_URL=$VITE_API_URL
 # Build da aplicação
 RUN npm run build
 
+# Limpa cache e node_modules para reduzir tamanho
+RUN rm -rf node_modules package*.json .npm
+
 # Production stage
 FROM nginx:alpine
 
 # Copia arquivos buildados
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-# Copia configuração customizada do nginx (opcional)
+# Copia configuração customizada do nginx
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 80
