--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -19,6 +19,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       
+      - name: Verify files exist
+        run: |
+          echo "Verifying required files..."
+          test -f backend/Dockerfile || (echo "❌ backend/Dockerfile not found" && exit 1)
+          test -f backend/requirements.txt || (echo "❌ backend/requirements.txt not found" && exit 1)
+          test -f frontend/Dockerfile || (echo "❌ frontend/Dockerfile not found" && exit 1)
+          test -f frontend/nginx.conf || (echo "❌ frontend/nginx.conf not found" && exit 1)
+          test -f frontend/package.json || (echo "❌ frontend/package.json not found" && exit 1)
+          echo "✅ All required files found"
+      
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
