--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -48,6 +48,7 @@ COPY . .
 EXPOSE 8000
 
 # Comando para iniciar a aplicação
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Executa migrations antes de iniciar o servidor
+CMD sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
 
