--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -52,6 +52,7 @@ EXPOSE 8000
 
 # Comando para iniciar a aplicação
 # Executa migrations antes de iniciar o servidor
-CMD sh -c "alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
+# Garante que estamos no diretório correto e que o PYTHONPATH está configurado
+CMD sh -c "cd /app && alembic upgrade head && uvicorn app.main:app --host 0.0.0.0 --port 8000"
 
 
