Fix: Adiciona tratamento para favicon.ico no nginx

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,6 +19,14 @@ server {
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
+        try_files $uri =404;
+    }
+    
+    # Tratamento para favicon.ico (navegador tenta automaticamente)
+    location = /favicon.ico {
+        log_not_found off;
+        access_log off;
+        return 204;
     }
 
     # Security headers
