--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,8 +1,13 @@
 server {
     listen 80;
-    server_name localhost;
+    listen [::]:80;
+    server_name _;
     root /usr/share/nginx/html;
     index index.html;
+    
+    # Logs para debug
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
 
     # Gzip compression
     gzip on;
