feat: refatora modelo de personagens com frases e melhora UX
- Remove campo system_prompt dos personagens
- Adiciona tabela phrases para armazenar falas por finalidade
- Adiciona campo who_is_character para descrição do personagem
- Gera system_prompt dinamicamente em tempo de execução
- Atualiza frontend para novo modelo de dados
- Melhora UX: toast fixo no viewport, limpeza de campos, scroll automático
- Corrige erro ao atualizar personagens
- Suporta imagens em base64 (data URIs)
- Adiciona migrations para nova estrutura

--- a/frontend/Dockerfile.dev
+++ b/frontend/Dockerfile.dev
@@ -16,7 +16,7 @@ ENV VITE_API_URL=$VITE_API_URL
 # Expõe a porta do Vite dev server
 EXPOSE 5173
 
-# Comando padrão (será sobrescrito pelo docker-compose)
+# Comando padrão (será sobrescrito pelo docker compose)
 ENTRYPOINT []
 CMD ["npm", "run", "dev", "--", "--host", "0.0.0.0"]
 
