fix: limpa revisões antigas do Alembic automaticamente
- Adiciona script clean_alembic.py para limpar revisões antigas
- Atualiza start.sh para executar limpeza antes das migrations
- Atualiza alembic/env.py para limpar revisões antigas automaticamente
- Resolve erro 'Can't locate revision identified by fa3c80dae25c'

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -47,9 +47,10 @@ ENV PYTHONPATH=/app
 # Copia apenas o código da aplicação (não requirements.txt)
 COPY . .
 
-# Copia e torna executável o script de inicialização
+# Copia e torna executáveis os scripts de inicialização
 COPY start.sh /app/start.sh
-RUN chmod +x /app/start.sh
+COPY clean_alembic.py /app/clean_alembic.py
+RUN chmod +x /app/start.sh /app/clean_alembic.py
 
 # Expõe a porta
 EXPOSE 7000
